Update get pieces
