# storage/api-docs/api-docs.json
@@ -687,12 +687,20 @@
                                         "description": "",
                                         "type": "string"
                                     },
+                                    "uuid": {
+                                        "description": "Piece uuid",
+                                        "type": "string"
+                                    },
                                     "community": {
                                         "description": "Community uuid",
                                         "type": "string"
                                     },
                                     "alias": {
                                         "description": "Community alias",
+                                        "type": "string"
+                                    },
+                                    "type_piece": {
+                                        "description": "Tipo de pieza {piece|material}",
                                         "type": "string"
                                     }
                                 },
@@ -706,6 +714,9 @@
                         "description": "List Pieces"
                     },
                     "422": {
+                        "description": ""
+                    },
+                    "403": {
                         "description": ""
                     }
                 }
